--- a/src/FundamentalsAggregator.Mvc/packages.config
+++ b/src/FundamentalsAggregator.Mvc/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.1.0" targetFramework="net40" />
-  <package id="Castle.Windsor" version="3.1.0" targetFramework="net40" />
+  <package id="Castle.Core" version="3.2.0" targetFramework="net40" />
+  <package id="Castle.Windsor" version="3.2.0" targetFramework="net40" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net40" />
-  <package id="le_log4net" version="2.3.3" targetFramework="net40" />
+  <package id="le_log4net" version="2.3.7" targetFramework="net40" />
   <package id="log4net" version="2.0.0" targetFramework="net40" />
-  <package id="MicrosoftWebMvc" version="2.0" targetFramework="net40" />
-  <package id="Mvc2Futures" version="2.0.50217.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
 </packages>
